@@ -20,8 +20,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static com.code.monks.nukkad.enums.ResponseErrorCodes.DUPLICATE_CATEGORY_EXCEPTION;
-import static com.code.monks.nukkad.enums.ResponseErrorCodes.UNHANDLED_EXCEPTION;
+import static com.code.monks.nukkad.enums.ResponseErrorCodes.*;
 
 @Service
 @Slf4j
@@ -35,12 +34,23 @@ public class ItemService {
 		try {
 			log.info("Attempting to save new item: {}", dto);
 
+
+			if (dto.getCategoryIds() == null || dto.getCategoryIds().isEmpty()) {
+				throw new IllegalArgumentException("Item must be associated with at least one category.");
+			}
+
 			ItemEntity item = new ItemEntity();
 			item.setName(dto.getName());
 			item.setUnit(dto.getUnit());
+			List<Long> categoryIds = dto.getCategoryIds();
+			List<CategoryEntity> categories = categoryRepository.findAllById(categoryIds);
 
-			List<CategoryEntity> categories = categoryRepository.findAllById(dto.getCategoryIds());
+			if (categories.size() != categoryIds.size()) {
+				throw new ResourceNotFoundException(ITEM_NOT_SAVED_EXCEPTION);
+			}
+
 			item.setCategories(categories);
+
 
 
 			if (dto.getImageUrls() != null && !dto.getImageUrls().isEmpty()) {
@@ -61,12 +71,12 @@ public class ItemService {
 			log.info("Item successfully saved to db: {}", saved);
 			return CreateItemResponseDTO.fromEntity(saved);
 
-		} catch (DataIntegrityViolationException e) {
-			log.error("Duplicated item data or constraint violation: {}", dto, e);
-			throw new DuplicateResourceException(DUPLICATE_CATEGORY_EXCEPTION);
-		} catch (Exception e) {
-			log.error("Unhandled exception while creating item: {}", dto, e);
-			throw new UnhandledException(UNHANDLED_EXCEPTION, e);
+		} catch (DataIntegrityViolationException de) {
+			log.error("Duplicated item data or constraint violation: {}", dto, de);
+			throw new DuplicateResourceException(DUPLICATE_ITEM_EXCEPTION);
+		}catch (UnhandledException ue) {
+			log.error("Unhandled exception while creating item: {}", dto, ue);
+			throw new UnhandledException(UNHANDLED_EXCEPTION, ue);
 		}
 	}
 
@@ -87,26 +97,26 @@ public class ItemService {
 		}
 	}
 
-	public CreateItemResponseDTO getItemById(int id) {
+	public CreateItemResponseDTO getItemById(Long id) {
 		log.info("Fetching item by ID: {}", id);
 		try {
 			ItemEntity item = itemRepository.findById(id)
-					.orElseThrow(() -> new ResourceNotFoundException("Item not found with ID: " + id));
+					.orElseThrow(() -> new ResourceNotFoundException(ITEM_NOT_FOUND, (long) id));
 			return CreateItemResponseDTO.fromEntity(item);
 		} catch (ResourceNotFoundException e) {
 			log.warn("Item not found with ID: {}", id);
 			throw e;
 		} catch (Exception e) {
 			log.error("Unhandled exception while fetching item with ID: {}", id, e);
-			throw new UnhandledException(UNHANDLED_EXCEPTION, e);
+			throw new UnhandledException(UNHANDLED_EXCEPTION,e);
 		}
 	}
 
-	public CreateItemResponseDTO updateItem(int id, CreateItemRequestDTO dto) {
+	public CreateItemResponseDTO updateItem(Long id, CreateItemRequestDTO dto) {
 		log.info("Attempting to update item with ID: {}", id);
 		try {
 			ItemEntity item = itemRepository.findById(id)
-					.orElseThrow(() -> new ResourceNotFoundException("Item not found with ID: " + id));
+					.orElseThrow(() -> new ResourceNotFoundException(ITEM_NOT_FOUND));
 
 			item.setName(dto.getName());
 			item.setUnit(dto.getUnit());
@@ -120,7 +130,7 @@ public class ItemService {
 							image.setItem(item); // set back-reference
 							return image;
 						})
-						.collect(Collectors.toList());
+						.toList();
 				item.getImages().addAll(images);
 			}
 
